--- a/blackjack.html
+++ b/blackjack.html
@@ -9,8 +9,11 @@
 <body>
     <div align="center">
         <div id="nav">
-            <input type="button" value="home">
-            <input type="button" value="game">
+            <input type="button" id="home" value="home">
+            <input type="button" id="home" value="game">
+        </div>
+        <div>
+            
         </div>
     </div>
 </body>
