--- a/blackjack.html
+++ b/blackjack.html
@@ -13,7 +13,17 @@
             <input type="button" id="home" value="game">
         </div>
         <div>
-            
+            <table bordercolor="black" border="1" style="border:solid 2px black">
+                <tr><td>card</td></tr>
+                <tr><td><div id="card"></div></td></tr>
+            </table>
+
+            <div>
+                <input type="button" id="game" value="start game">
+                <input type="button" id="draw" value="draw a card">
+                <input type="button" id="draw" value="fold">
+                <input type="button" id="restart" value="restart">
+            </div>
         </div>
     </div>
 </body>
