--- a/blackjack.html
+++ b/blackjack.html
@@ -21,7 +21,7 @@
             <div>
                 <input type="button" id="game" value="start game">
                 <input type="button" id="draw" value="draw a card">
-                <input type="button" id="draw" value="fold">
+                <input type="button" id="fold" value="fold">
                 <input type="button" id="restart" value="restart">
             </div>
         </div>
