--- a/blackjack.html
+++ b/blackjack.html
@@ -13,9 +13,9 @@
             <input type="button" id="home" value="game">
         </div>
         <div>
-            <table bordercolor="black" border="1" style="border:solid 2px black">
-                <tr><td>card</td></tr>
-                <tr><td><div id="card"></div></td></tr>
+            <table cellpadding="0" cellspacing="0" bordercolor="black" border="1">
+                <tr><td style="border:2px solid black" align="center">card</td></tr>
+                <tr><td style="border:2px solid black"><div id="card"></div></td></tr>
             </table>
 
             <div>
@@ -26,5 +26,6 @@
             </div>
         </div>
     </div>
+    <script src="blackjackscript.js"></script>
 </body>
 </html>
