add message line

--- a/blackjack.html
+++ b/blackjack.html
@@ -35,6 +35,11 @@
             border-color:maroon;
             color:maroon;
         }
+        .message
+        {
+            color:darkorange;
+            width:50vw;
+        }
     </style>
 </head>
 <body>
@@ -51,6 +56,8 @@
                 <tr><td  class="label" align="center"">card</td></tr>
                 <tr><td style="border:2px solid black"><div id="card"></div></td></tr>
             </table>
+
+            <div><br><input type="text" class="message" id="message"></div>
 
             <div>
 		        <br><br>
