made the fold button show sum, for now, and reworks some html to show sum

--- a/blackjack.html
+++ b/blackjack.html
@@ -57,7 +57,7 @@
                 <tr><td style="border:2px solid black"><div id="card"></div></td></tr>
             </table>
 
-            <div><br><input type="text" class="message" id="message"></div>
+            <div><br><p input type="text" class="message" id="message"></p></div>
 
             <div>
 		        <br><br>
